--- a/history.html
+++ b/history.html
@@ -12,7 +12,11 @@
             </h1>
             <img src="map1.png"> 
         </header>
-        <nav>
+        <nav> 
+                <h1><a href="index.html">
+                        home</a></h1>
+                    <h1><a href="funfacts.html">
+                        fun facts</a></h1>    
             <ul class='cat'>
                 <li>
                     <a href="https://eriecanalway.org/learn/history-culture"><b>History</b></a></li>
